--- a/css/output.css
+++ b/css/output.css
@@ -10,6 +10,10 @@ body a:hover {
   text-decoration: none;
 }
 
+.bold {
+  font-weight: bold;
+}
+
 .nav-bar {
   display: flex;
   flex-direction: row;
@@ -50,6 +54,10 @@ h3 {
   font-size: 18px;
 }
 
+h5 {
+  font-size: 25px;
+}
+
 .menu {
   display: flex;
   flex-direction: row;
@@ -63,6 +71,21 @@ h3 {
   line-height: 30px;
 }
 
+.breadcrumb {
+  border-bottom: 1px solid #DFDFDF;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.breadcrumb li {
+  list-style-type: none;
+  line-height: 30px;
+}
+.breadcrumb li {
+  display: inline;
+  margin-right: 15px;
+  font-size: 32px;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -72,6 +95,36 @@ h3 {
 .row li {
   list-style-type: none;
   line-height: 30px;
+}
+
+.weekly-schedule {
+  margin-left: 500px;
+}
+
+.row2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0 200px;
+  margin-bottom: 60px;
+  align-items: baseline;
+}
+.row2 li {
+  list-style-type: none;
+  line-height: 30px;
+}
+
+.week-work {
+  width: 600px;
+}
+
+#pre-work-list {
+  display: flex;
+  flex-direction: column;
+  margin-left: -15px;
+}
+#pre-work-list a {
+  margin-bottom: 5px;
 }
 
 .course-list li {
