--- a/css/output.css
+++ b/css/output.css
@@ -15,6 +15,11 @@ body a:hover {
   font-weight: bold;
 }
 
+.teal {
+  color: #009FA0;
+  font-weight: bold;
+}
+
 .nav-bar {
   display: flex;
   flex-direction: row;
@@ -61,6 +66,13 @@ h5 {
   font-size: 25px;
 }
 
+h6 {
+  font-size: 22px;
+  font-weight: bold;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #DFDFDF;
+}
+
 .course-content {
   margin: 0 600px;
 }
@@ -70,11 +82,16 @@ h5 {
   flex-direction: row;
   justify-content: space-around;
   border-bottom: 1px solid #DFDFDF;
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
 .weekday-toggle:hover {
   cursor: pointer;
+}
+
+.week-work a {
+  font-size: 18px;
 }
 
 .monday-work {
@@ -105,6 +122,7 @@ h5 {
 .row {
   display: flex;
   flex-direction: row;
+  margin-bottom: 20px;
 }
 .row li {
   list-style-type: none;
@@ -139,6 +157,9 @@ h5 {
   line-height: 30px;
 }
 
+.col-md-9 h1 {
+  margin-bottom: 40px;
+}
 .col-md-9 ul li {
   list-style-type: disc;
 }
@@ -146,9 +167,21 @@ h5 {
   list-style-type: circle;
 }
 
-#tab-content li {
+#tab-headers li {
   list-style-type: none;
   line-height: 30px;
+}
+
+.caret {
+  width: 10px;
+}
+
+.container {
+  margin-top: 40px;
+}
+
+.tab-content {
+  margin-top: 30px;
 }
 
 /*# sourceMappingURL=output.css.map */
