--- a/scss/input.scss
+++ b/scss/input.scss
@@ -101,7 +101,7 @@ h6 {
 }
 
 .course-content {
-  margin: 0 600px;
+  margin: 0 22%;
 }
 .menu {
   @include horizontalMenuStyle;
@@ -207,3 +207,5 @@ h6 {
 .tab-content {
   margin-top: 30px;
 }
+
+// @media screen and
