--- a/scss/input.scss
+++ b/scss/input.scss
@@ -220,3 +220,14 @@ h6 {
 .tab-content {
   margin-top: 30px;
 }
+
+.tab-pane {
+  img {
+    display: block;
+    margin: {
+      left: auto;
+      right: auto;
+      bottom: 20px;
+    }
+  }
+}
